@@ -1,3 +1,8 @@
+2023-12-24  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-pipe-stty-settings): New defcustom.
+	(tramp-sh-handle-make-process): Use it.  (Bug#62093)
+
 2023-12-22  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-handle-make-process):
